@@ -156,6 +156,7 @@ Data Changes:
 - Armor mods for custom liners have now had their categories renamed to be more generic.
 - Foci, formulae, and magical supplies and compounds will now use "Force" instead of "Rating" where appropriate.
 - Fixed page reference for the Guard, Hammer, Lockdown, Mugger, Shell, Sneak, Stealth, Track and Wrapper programs in gear.xml.
+- Spellcasting foci now properly no longer stack with individualised spellcasting foci of the same type. This change does not affect existing characters with spellcasting foci.
 
 Fixes implemented by BM123499
 
